style: alteração dos  faveicon no site

--- a/repo-sprint3/site/ondo/public/dashboard/bobIA.html
+++ b/repo-sprint3/site/ondo/public/dashboard/bobIA.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="../assets/img/bob_camisa.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BobIA</title>
     <link rel="stylesheet" href="../css/bobIA.css">
 </head>
 <body>
