--- a/repo-sprint3/site/ondo/public/index.html
+++ b/repo-sprint3/site/ondo/public/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-BR">
 
 <head>
+    <link rel="icon" href="assets/img/wasabi.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONDO - Inicio</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="./css/MenuNav.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/style.css">
