--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-
+  <link rel="icon" href="assets/img/wasabi.png" type="image/x-icon">
   <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="menuLateral.css">
   <link rel="stylesheet" href="graficos.css" />
