--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="menuLateral.css">
   <link rel="stylesheet" href="graficos.css" />
+  <link rel="stylesheet" href="parametros.css">
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
@@ -67,7 +68,35 @@ buscarMensagemAlerta()">
       </div>
     </div>
     <div class="content">
-<script data-jsd-embedded data-key="72170b6e-c6b9-4e8e-9ef5-c38ca60baaf3" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
+      <script data-jsd-embedded data-key="72170b6e-c6b9-4e8e-9ef5-c38ca60baaf3" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
+      <div class="area-parametros-alerta">
+        <p class="titulo-legenda">
+            Legenda - Parâmetros para Alertas
+        </p>
+        <div class="parametros-alerta">
+            <div class="item-regua perigo-frio">
+                <p>Perigo</p>
+                <p>&lt;=8°C</p>
+            </div>
+            <div class="item-regua alerta-frio">
+                <p>Alerta</p>
+                <p>&lt;=10°C</p>
+            </div>
+            <div class="item-regua ideal">
+                <p>Ideal</p>
+                <p>16°C</p>
+            </div>
+            <div class="item-regua alerta-quente">
+                <p>Alerta</p>
+                <p>&gt;=20°C</p>
+            </div>
+            <div class="item-regua perigo-quente">
+                <p>Perigo</p>
+                <p>&gt;=21°C</p>
+            </div>
+        </div>
+    </div>
+
       <div class="kpi_cards">
         <div class="card">
           <div class="kpi_titulo">
