style: css tela de cadastrar nova estufa

--- a/repo-sprint3/site/ondo/public/dashboard/index.html
+++ b/repo-sprint3/site/ondo/public/dashboard/index.html
@@ -149,18 +149,20 @@
             </div>
 
             <dialog id="dialog_modal">
+                <h1>Cadastrar estufa</h1>
+                <div class="espaco_cadastrar">
                 <div class="ipt-container" id="div_nome">
-                    <label for="">Nome da Estufa</label>
+                    <label for="">Nome da Estufa: </label>
                     <input type="text" id="input_nome">
                 </div>
                 <div class="ipt-container" id="div_tamanho">
-                    <label for="">Tamanho</label>
+                    <label for="">Tamanho: </label>
                     <input type="number" id="input_tamanho">
                 </div>
                 <div class="ipt-container" id="div_espaco">
-                    <label for="">Espaço entre plantas</label>
+                    <label for="">Espaço entre plantas: </label>
                     <input type="number" id="input_espaco">
-
+                </div>
                 </div>
                 <div class="container-btn">
                     <button class="botao btn_entrar" onclick="cadastrarEstufa()">Cadastrar</button>
