--- a/repo-sprint3/site/ondo/public/login.html
+++ b/repo-sprint3/site/ondo/public/login.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="./css/login.css">
-  
+
   <script src="./js/sessao.js"></script>
 
 
@@ -15,12 +15,12 @@
 
 <body>
   <div class="container">
-    <div class="login">
-      <div class="alerta_erro">
-        <div class="card_erro" id="cardErro">
-            <span id="mensagem_erro"></span>
-        </div>
+    <div class="alerta_erro">
+      <div class="card_erro" id="cardErro">
+        <span id="mensagem_erro"></span>
+      </div>
     </div>
+    <div class="login">
       <a href="index.html">
         <img class="img_btn_voltar" src="assets/img/btn_voltar.png" alt="btn voltar">
       </a>
@@ -45,7 +45,7 @@
         <button class="botao btn_entrar" onclick="entrar()">Entrar</button>
         <a class="texCadastro" href="cadastro.html">Ainda não tem uma conta?</a>
       </div>
-      
+
       <div class="img_logo_ondo"></div>
     </div>
     <div class="image-wasabi"></div>
@@ -54,7 +54,7 @@
       <img src="./assets/circle-loading.gif" id="loading-gif">
     </div>
 
-  <div id="div_erros_login"></div>
+    <div id="div_erros_login"></div>
   </div>
 </body>
 
@@ -149,15 +149,15 @@
     aguardar();
     var emailVar = ipt_email.value;
     var senhaVar = ipt_senha.value;
-    
+
     console.log(emailVar, senhaVar)
     if (emailVar == "" || senhaVar == "") {
       cardErro.style.display = "block"
       mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
       finalizarAguardar();
+      setInterval(sumirMensagem, 5000)
       return false;
-    }
-    else {
+    }else {
       setInterval(sumirMensagem, 5000)
     }
 
