fetch: dashboard_suporte pronta

--- a/repo-sprint3/site/ondo/public/dashboard/home_sup.html
+++ b/repo-sprint3/site/ondo/public/dashboard/home_sup.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONDO | Estufas</title>
+    <link rel="stylesheet" href="home_sup.css">
     <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="stylesheet" href="VincularSensor.css">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="menuLateral.css">
     <link rel="stylesheet" href="graficos.css" />
@@ -69,13 +70,16 @@
 
                 <h3>Inicio</h3>
                 <h5>Bem vindo, <b id="b_usuario"></b></h5>
+
             </div>
+            
 
 
 
         </div>
 
     </main>
+
 
 </body>
 
