--- a/repo-sprint3/site/ondo/public/login.html
+++ b/repo-sprint3/site/ondo/public/login.html
@@ -189,7 +189,7 @@
           sessionStorage.ESTUFA = JSON.stringify(json.estufa)
 
           setTimeout(function () {
-            if(sessionStorage.TIPO_USUARIO){
+            if(sessionStorage.TIPO_USUARIO == 'suporte'){
 
               window.location = "./dashboard/dash_suporte.html";
             }else{
