--- a/repo-sprint3/site/ondo/public/dashboard/VincularSensor.html
+++ b/repo-sprint3/site/ondo/public/dashboard/VincularSensor.html
@@ -20,29 +20,30 @@
         rel="stylesheet">
 </head>
 
-<body onload="validarSessao(), buscarQTDEstufas()">
+<body onload="validarSessao(), buscarEmpresas()">
 
-    <!-- menu -->
+
     <header class="menu_dashboard">
         <nav class="menuLateral">
             <img src="../assets/img/logo_branco.png" alt="">
             <ul class="container_lista">
-
-                <li class="menu_item select">
-                    <div class="container_img ">
-                        <img src="../assets/img/Dashboard/icon_board.png" alt="">
-                    </div>
-                    <a href="https://ondosuporte.atlassian.net/jira/servicedesk/projects/SUP/queues/custom/1">Jira - Board </a>
-                </li>
-
                 <li class="menu_item select">
                     <div class="container_img ">
                         <img src="../assets/img/Dashboard/info_branco.svg" alt="">
                     </div>
                     <a href="VincularSensor.html">Vincular sensor</a>
                 </li>
-                
-                <li class="menu_item select">
+
+                <li class="menu_item ">
+                    <div class="container_img ">
+                        <img src="../assets/img/Dashboard/icon_board.png" alt="">
+                    </div>
+                    <a href="https://ondosuporte.atlassian.net/jira/servicedesk/projects/SUP/queues/custom/1">Jira -
+                        Board </a>
+                </li>
+
+
+                <li class="menu_item ">
                     <div class="container_img ">
                         <img src="../assets/img/bob_camisa.png" alt="">
                     </div>
@@ -70,15 +71,29 @@
                 <h5>Bem vindo, <b id="b_usuario"></b></h5>
 
             </div>
-            
+
 
         </div>
         <div class="estilizar_container">
-        <div class="form_vincular">
-            <h1>Vincular sensor na estufa</h1>
+            <div class="form_vincular">
+                <h1>Vincular sensor na estufa</h1>
                 <div class="espaco_cadastrar">
                     <div class="ipt-container" id="div_nome">
                         <i class="fas fa-seedling"></i>
+                        <select for="input_loc"  id="select_empresas" onchange="listarEstufas(this)">
+
+                        </select>
+
+                    </div>
+                    <div class="ipt-container" id="div_nome">
+                        <i class="fas fa-seedling"></i>
+                        <select for="input_loc"  id="select_estufas">
+
+                        </select>
+
+                    </div>
+                    <div class="ipt-container" id="div_nome">
+                        <i class="fas fa-seedling" style="color: black;"></i>
                         <label for="input_loc"></label>
                         <input placeholder="Localidade" type="text" id="input_loc" oninput="validarLocalidade()">
 
@@ -93,7 +108,7 @@
                 </div>
                 <div id="erro_geral" class="erro"></div>
                 <div class="container-btn">
-                    <button class="botao_btn_entrar" onclick="VincularSensor()">Vincular</button>
+                    <button class="botao_btn_entrar" onclick="cadastrarSensor()">Vincular</button>
                 </div>
             </div>
         </div>
@@ -107,44 +122,123 @@
 </body>
 
 <script>
-function validarLocalidade() {
-    var LocInput = document.getElementById("input_loc");
-    var erro_geral = document.getElementById("erro_geral");
+    function cadastrarSensor(){
+        // /inserirSensor/:empresaID
+        var idEstufaVar = select_estufas.value;
+        var localVar = input_loc.value;
+        var tipoSensorVar = input_tipo.value;
 
-    if (LocInput.value.length >= 3) {
-        LocInput.style.borderColor = "green";
-        erro_geral.innerHTML = "";
-    } else {
-        LocInput.style.borderColor = "red";
-        erro_geral.innerHTML = "A localização deve ter pelo menos 3 caracteres.";
+        fetch(`/home/inserirSensor/`, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                idEstufaServer: idEstufaVar,
+                localServer: localVar,
+                tipoSensorServer: tipoSensorVar
+            })
+        }).then(function (resposta) {
+            if (resposta.ok) {
+                window.alert("sensor atualizado com sucesso pelo usuario: " + sessionStorage.getItem("NOME_RESPONSAVEL") + "!");
+                window.location = "/dashboard/vincularSensor.html"
+            } else if (resposta.status == 404) {
+                window.alert("Deu 404!");
+            } else {
+                throw ("Houve um erro ao tentar salvar o sensor! Código da resposta: " + resposta.status);
+            }
+        }).catch(function (resposta) {
+            console.log(`#ERRO: ${resposta}`);
+        });
     }
-}
 
-function validarTipo() {
-    var TipoInput = document.getElementById("input_tipo");
-    var erro_geral = document.getElementById("erro_geral");
+    function listarEstufas(itemSelecionado) {
+        var idEmpresa = itemSelecionado.value;
+        console.log(idEmpresa)
+        fetch(`/home/listarAll/${idEmpresa}`, {
+            method: "GET",
+        })
+            .then(function (resposta) {
+                var acc = "";
+                resposta.json()
+                .then((estufas) => {
+                    console.log(estufas)
+                    acc += '<option value="#" disabled selected>Select</option>';
 
-    if (TipoInput.value.toLowerCase() === 'temperatura') {
-        TipoInput.style.borderColor = "green";
-        erro_geral.innerHTML = "";
-    } else {
-        TipoInput.style.borderColor = "red";
-        erro_geral.innerHTML = "O tipo deve ser 'temperatura'.";
+                    estufas.forEach((estufa) => {
+
+                        acc += `
+                                <option value="${estufa.idEstufa}">${estufa.nome}</option>
+                            `
+                    });
+                    select_estufas.innerHTML = acc;
+                });
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
     }
-}
 
-function VincularSensor() {
-    var LocInput = document.getElementById("input_loc");
-    var TipoInput = document.getElementById("input_tipo");
-    var erro_geral = document.getElementById("erro_geral");
-
-    if (LocInput.style.borderColor === "green" && TipoInput.style.borderColor === "green") {
-        alert("Sensor Vinculado com sucesso!");
-    } else {
-        erro_geral.innerHTML = "Por favor, corrija os campos destacados antes de continuar.";
-        alert("Por favor, corrija os campos destacados antes de continuar.");
+      function buscarEmpresas() {
+        var acc = '';
+        fetch(`/empresas/listarAll`, {
+            method: "GET",
+        })
+            .then(function (resposta) {
+                resposta.json().then((empresas) => {
+                    acc += '<option value="#" disabled selected>Select</option>';
+                    empresas.forEach((empresa) => {
+                        acc += `
+                            <option value="${empresa.idEmpresa}">${empresa.razaoSocial}</option>
+                        `
+                    });
+                    select_empresas.innerHTML = acc;
+                });
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
     }
-}
+
+
+    function validarLocalidade() {
+        var LocInput = document.getElementById("input_loc");
+        var erro_geral = document.getElementById("erro_geral");
+
+        if (LocInput.value.length >= 3) {
+            LocInput.style.borderColor = "green";
+            erro_geral.innerHTML = "";
+        } else {
+            LocInput.style.borderColor = "red";
+            erro_geral.innerHTML = "A localização deve ter pelo menos 3 caracteres.";
+        }
+    }
+
+    function validarTipo() {
+        var TipoInput = document.getElementById("input_tipo");
+        var erro_geral = document.getElementById("erro_geral");
+
+        if (TipoInput.value.toLowerCase() === 'temperatura') {
+            TipoInput.style.borderColor = "green";
+            erro_geral.innerHTML = "";
+        } else {
+            TipoInput.style.borderColor = "red";
+            erro_geral.innerHTML = "O tipo deve ser 'temperatura'.";
+        }
+    }
+
+    function VincularSensor() {
+        var LocInput = document.getElementById("input_loc");
+        var TipoInput = document.getElementById("input_tipo");
+        var erro_geral = document.getElementById("erro_geral");
+
+        if (LocInput.style.borderColor === "green" && TipoInput.style.borderColor === "green") {
+            alert("Sensor Vinculado com sucesso!");
+        } else {
+            erro_geral.innerHTML = "Por favor, corrija os campos destacados antes de continuar.";
+            alert("Por favor, corrija os campos destacados antes de continuar.");
+        }
+    }
 
 
 
