--- a/repo-sprint3/site/ondo/public/dashboard/dash_suporte.html
+++ b/repo-sprint3/site/ondo/public/dashboard/dash_suporte.html
@@ -28,22 +28,22 @@
         <nav class="menuLateral">
             <img src="../assets/img/logo_branco.png" alt="">
             <ul class="container_lista">
-
-                <li class="menu_item select">
-                    <div class="container_img ">
-                        <img src="../assets/img/Dashboard/icon_board.png" alt="">
-                    </div>
-                    <a href="https://ondosuporte.atlassian.net/jira/servicedesk/projects/SUP/queues/custom/1">Jira - Board </a>
-                </li>
-
                 <li class="menu_item select">
                     <div class="container_img ">
                         <img src="../assets/img/Dashboard/info_branco.svg" alt="">
                     </div>
                     <a href="VincularSensor.html">Vincular sensor</a>
                 </li>
+
+                <li class="menu_item ">
+                    <div class="container_img ">
+                        <img src="../assets/img/Dashboard/icon_board.png" alt="">
+                    </div>
+                    <a href="https://ondosuporte.atlassian.net/jira/servicedesk/projects/SUP/queues/custom/1">Jira - Board </a>
+                </li>
+
                 
-                <li class="menu_item select">
+                <li class="menu_item ">
                     <div class="container_img ">
                         <img src="../assets/img/bob_camisa.png" alt="">
                     </div>
