--- a/repo-sprint3/site/ondo/public/calculadora.html
+++ b/repo-sprint3/site/ondo/public/calculadora.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="assets/img/wasabi.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/icon/wasabi.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/calculadora.css">
