--- a/repo-sprint3/site/ondo/public/dashboard/dash_suporte.html
+++ b/repo-sprint3/site/ondo/public/dashboard/dash_suporte.html
@@ -2,8 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="icon" href="../assets/img/wasabi.png" type="image/x-icon">
-    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="../assets/icon/wasabi.png" type="image/x-icon">    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONDO | Estufas</title>
