--- a/repo-sprint3/site/ondo/public/dashboard/VincularSensor.html
+++ b/repo-sprint3/site/ondo/public/dashboard/VincularSensor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon/wasabi.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -163,7 +163,7 @@
                 resposta.json()
                 .then((estufas) => {
                     console.log(estufas)
-                    acc += '<option value="#" disabled selected>Select</option>';
+                    acc += '<option value="#" disabled selected>Selecione</option>';
 
                     estufas.forEach((estufa) => {
 
