--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -53,10 +53,10 @@ buscarMensagemAlerta(), buscarSensoresEstufas()">
 
         <li class="menu_item">
           <div class="container_img ">
-            <img src="../assets/img/Dashboard/sair.svg" alt="">
+              <img src="../assets/img/Dashboard/sair.svg" alt="">
           </div>
           <span onclick="limparSessao()">Sair</span>
-        </li>
+      </li>
       </ul>
     </nav>
   </header>
@@ -420,6 +420,7 @@ buscarMensagemAlerta(), buscarSensoresEstufas()">
       .then(response => response.json())
       .then(valores => {
 
+        valores.reverse()
         valores.forEach((valor) => {
           if (grafico.data.labels.length == 10 && grafico.data.datasets[0].data.length == 10) {
             grafico.data.labels.shift();
