--- a/repo-sprint3/site/BobIA1/public/index.html
+++ b/repo-sprint3/site/BobIA1/public/index.html
@@ -22,7 +22,7 @@
         async function gerarResposta() {
             const pergunta = document.getElementById('pergunta').value;
 
-            const response = await fetch('/perguntar', {
+            const response = await fetch('http://10.18.32.144:3001/perguntar', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
